# max-cut-ga

./: CMakeLists.txt  README.md  main.cpp  script_exec.py
include/: Algorithm.h  Individual.h  Population.h
src/: Algorithm.cpp  Individual.cpp  Population.cpp
